k8s/manifests/backend/gateway-api/backend_gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: backend-gateway
  namespace: istio-gateway
  labels:
    app: backend
    version: v1
spec:
  gatewayClassName: istio           # changed from nginx to istio
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
