k8s/manifests/backend/gateway-api/backend_virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-virtualservice
  namespace: istio-gateway
  labels:
    app: backend
    version: v1
spec:
  hosts:
    - api.weatherly.local
  gateways:
    - weatherly-gateway
  http:
    match:
      - uri:
          prefix: /
    route:
      - destination:
          host: backend-service.backend.svc.cluster.local
          port:
            number: 8080
